--- a/index.html
+++ b/index.html
@@ -2,278 +2,95 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Beachvolleycup 2025 – Spielplan & KO-Runde</title>
+  <title>Beachvolleycup 2025 – Admin-Modus Demo</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background: #f4faff; }
     h1, h2 { color: #003366; }
-    table { border-collapse: collapse; width: 100%; margin-bottom: 30px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #e0e0e0; }
-    tr:nth-child(even) { background-color: #f9f9f9; }
-    .feld1-row { background-color: #f0faff; }
-    .feld2-row { background-color: #fff0f5; }
-    .team-with-logo { display: flex; align-items: center; gap: 8px; justify-content: flex-start; }
-    .team-with-logo img { width: 40px; height: 40px; object-fit: contain; }
-    .runde-section { border-top: 2px solid #003366; padding-top: 10px; margin-top: 30px; }
-    .match-row { display: flex; gap: 10px; justify-content: flex-start; flex-wrap: wrap; margin-bottom: 20px; align-items: center; }
-    .match-row input[type="number"] { width: 50px; }
-    .hidden { display: none; }
+    .admin-info { text-align: center; margin-bottom: 20px; font-weight: bold; }
+    .admin-active { color: green; }
+    .admin-inactive { color: #555; }
+    .button-row button:disabled, input[type="number"]:disabled { background: #ddd !important; color: #888 !important; cursor: not-allowed !important; }
     .button-row { text-align: center; margin: 30px 0; }
     .button-row button { background: #003366; color: white; border: none; padding: 10px 20px; margin: 5px; cursor: pointer; font-size: 16px; }
-    .button-row button:hover { background: #005599; }
-    .platzierung-table { width: 60%; margin: 0 auto 40px auto; }
-    .platzierung-table th, .platzierung-table td { padding: 10px; }
-    .platzierung-table th { background: #e0e0e0; }
-    .feld-label { font-weight: bold; color: #003366; margin-right: 12px; }
-    ul { list-style: disc; padding-left: 30px; }
-    ul li { text-align: left; }
+    .button-row button:hover:not(:disabled) { background: #005599; }
+    input[type="number"] { width: 60px; }
+    #admin-login { margin-bottom: 20px; text-align: center; }
+    #admin-login input[type="password"] { padding: 6px; font-size: 16px; }
+    #admin-login button { padding: 6px 16px; font-size: 16px; }
   </style>
 </head>
 <body>
-  <h1>🏐 Beachvolleycup 2025 – Vorrunde & KO-Runde</h1>
+  <h1>🏐 Beachvolleycup 2025 – Admin-Modus Demo</h1>
 
-  <h2>🔷 Gruppe A</h2>
-  <ul id="gruppe-a-list" style="text-align:left;"></ul>
+  <div id="admin-info" class="admin-info admin-inactive">Bearbeitung nur für Admin möglich</div>
 
-  <h2>🔶 Gruppe B</h2>
-  <ul id="gruppe-b-list" style="text-align:left;"></ul>
-
-  <h2>📅 Spielplan Vorrunde</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Zeit</th><th>Feld</th><th>Gruppe</th><th>Team A</th><th>Satz 1</th><th>Satz 2</th><th>Team B</th><th>Satz 1</th><th>Satz 2</th><th>Schiedsrichter</th>
-      </tr>
-    </thead>
-    <tbody id="spielplan-body"></tbody>
-  </table>
-
-  <h2>📊 Zwischenergebnisse Gruppe A</h2>
-  <table><thead><tr><th>Team</th><th>Punkte</th><th>Gesamtbälle</th></tr></thead><tbody id="ranking-A"></tbody></table>
-
-  <h2>📊 Zwischenergebnisse Gruppe B</h2>
-  <table><thead><tr><th>Team</th><th>Punkte</th><th>Gesamtbälle</th></tr></thead><tbody id="ranking-B"></tbody></table>
-
-  <div class="button-row">
-    <button onclick="berechnePunkteUndStarteKO()" id="btn-ko">📊 KO-Runde starten</button>
-    <button onclick="berechneHalbfinale()" id="btn-halbfinale" class="hidden">🏁 Halbfinale starten</button>
-    <button onclick="berechneFinale()" id="btn-finale" class="hidden">🎉 Finale berechnen</button>
-    <button onclick="zeigeGesamtplatzierung()" id="btn-platzierung" class="hidden">📋 Gesamtplatzierung anzeigen</button>
+  <div id="admin-login">
+    <input type="password" id="admin-pass" placeholder="Admin Passwort" />
+    <button onclick="adminLogin()">🔑 Login</button>
+    <span id="login-message" style="color:red;margin-left:10px;"></span>
+  </div>
+  <div id="admin-logout" style="display:none; text-align:center;">
+    <button onclick="adminLogout()">🚪 Logout</button>
   </div>
 
-  <div id="ko-runde"></div>
-  <div id="halbfinale"></div>
-  <div id="finale"></div>
-  <div id="gesamtplatzierung"></div>
+  <div class="button-row">
+    <button id="btn-ko" disabled>📊 KO-Runde starten</button>
+    <button id="btn-halbfinale" disabled>🏁 Halbfinale starten</button>
+    <button id="btn-finale" disabled>🎉 Finale berechnen</button>
+    <button id="btn-platzierung" disabled>📋 Gesamtplatzierung anzeigen</button>
+  </div>
+
+  <table>
+    <tr>
+      <td>Team A Punkte:</td>
+      <td><input type="number" id="punkteA" disabled></td>
+    </tr>
+    <tr>
+      <td>Team B Punkte:</td>
+      <td><input type="number" id="punkteB" disabled></td>
+    </tr>
+  </table>
 
   <script>
-    // --- TEAMS & GRUPPEN ---
-    const alleTeams = [
-      'Dreamteam11', 'Oaschlecker – Traunreut', 'Beachbuddies – unbekannt – Wolfgang Lisowski',
-      'SuperSTOAS 3', 'Unschlagbar 12', 'Geile Reichenhaller – TSV Bad Reichenhall',
-      'SuperSTOAS 1', 'Ein Team von Martin Schneider – Traunreut', 'Mila Superstar – TSV Palling',
-      'Meine Volksbank-Raiffeisenbank eG', 'Leider geil – TSV Traunwalchen', 'SuperSTOAS 2'
-    ];
-    const gruppeA = alleTeams.slice(0, 6);
-    const gruppeB = alleTeams.slice(6);
+    const ADMIN_PASSWORD = "0815";
+    let isAdmin = false;
 
-    function logoHTML(team) {
-      const file = team.replace(/ /g, '_') + '.png';
-      return `<div class="team-with-logo"><img src="logos/${file}" alt="${team}"><span>${team}</span></div>`;
+    function setAdminMode(active) {
+      isAdmin = active;
+      // Info-Anzeige
+      document.getElementById('admin-info').textContent = active ? "Admin-Modus aktiv" : "Bearbeitung nur für Admin möglich";
+      document.getElementById('admin-info').className = "admin-info " + (active ? "admin-active" : "admin-inactive");
+      // Login/Logout sichtbar
+      document.getElementById('admin-login').style.display = active ? "none" : "block";
+      document.getElementById('admin-logout').style.display = active ? "block" : "none";
+      // Buttons
+      document.getElementById('btn-ko').disabled = !active;
+      document.getElementById('btn-halbfinale').disabled = !active;
+      document.getElementById('btn-finale').disabled = !active;
+      document.getElementById('btn-platzierung').disabled = !active;
+      // Inputfelder
+      document.querySelectorAll('input[type="number"]').forEach(input => input.disabled = !active);
     }
 
-    gruppeA.forEach(team => {
-      const li = document.createElement('li');
-      li.style.textAlign = "left";
-      li.innerHTML = logoHTML(team);
-      document.getElementById('gruppe-a-list').appendChild(li);
-    });
-    gruppeB.forEach(team => {
-      const li = document.createElement('li');
-      li.style.textAlign = "left";
-      li.innerHTML = logoHTML(team);
-      document.getElementById('gruppe-b-list').appendChild(li);
-    });
-
-    function kombiniere(teams, gruppe) {
-      const spiele = [];
-      for (let i = 0; i < teams.length; i++) {
-        for (let j = i + 1; j < teams.length; j++) {
-          spiele.push({ teamA: teams[i], teamB: teams[j], gruppe });
-        }
+    function adminLogin() {
+      const pass = document.getElementById('admin-pass').value;
+      const msg = document.getElementById('login-message');
+      if (pass === ADMIN_PASSWORD) {
+        setAdminMode(true);
+        msg.textContent = "";
+      } else {
+        msg.textContent = "Falsches Passwort!";
       }
-      return spiele;
     }
 
-    const spieleA = kombiniere(gruppeA, 'A');
-    const spieleB = kombiniere(gruppeB, 'B');
-    const belegung = [];
-    const zeiten = Array.from({ length: 30 }, (_, i) => new Date(2025, 6, 3, 10, i * 15).toTimeString().slice(0, 5));
-    const letzteEinsätze = {}; alleTeams.forEach(t => letzteEinsätze[t] = -99);
-    const punkte = {}; alleTeams.forEach(t => punkte[t] = { punkte: 0, bälle: 0 });
-    const queueA = [...spieleA];
-    const queueB = [...spieleB];
-
-    for (let zi = 0; zi < zeiten.length; zi++) {
-      const feldA = zi % 2 === 0 ? 'Feld 1 (Sand)' : 'Feld 2 (Rasen)';
-      const feldB = zi % 2 === 0 ? 'Feld 2 (Rasen)' : 'Feld 1 (Sand)';
-      const zeit = zeiten[zi];
-
-      function nimmSpiel(queue, gruppe) {
-        for (let i = 0; i < queue.length; i++) {
-          const s = queue[i];
-          if (zi - letzteEinsätze[s.teamA] >= 2 && zi - letzteEinsätze[s.teamB] >= 2) {
-            queue.splice(i, 1);
-            letzteEinsätze[s.teamA] = zi;
-            letzteEinsätze[s.teamB] = zi;
-            const schiri = (gruppe === 'A' ? gruppeA : gruppeB).find(t => t !== s.teamA && t !== s.teamB && letzteEinsätze[t] < zi - 1) || 'tbd';
-            return { ...s, zeit, feld: gruppe === 'A' ? feldA : feldB, schiri };
-          }
-        }
-        return null;
-      }
-
-      const sA = nimmSpiel(queueA, 'A');
-      const sB = nimmSpiel(queueB, 'B');
-      if (sA) belegung.push(sA);
-      if (sB) belegung.push(sB);
+    function adminLogout() {
+      setAdminMode(false);
+      document.getElementById('admin-pass').value = "";
+      document.getElementById('login-message').textContent = "";
     }
 
-    const tbody = document.getElementById('spielplan-body');
-    belegung.forEach((spiel, i) => {
-      const tr = document.createElement('tr');
-      tr.className = spiel.feld.includes('Feld 1') ? 'feld1-row' : 'feld2-row';
-      tr.innerHTML = `
-        <td>${spiel.zeit}</td>
-        <td>${spiel.feld}</td>
-        <td>${spiel.gruppe}</td>
-        <td style="text-align:left;">${logoHTML(spiel.teamA)}</td>
-        <td><input type="number" data-match="${i}" data-team="${spiel.teamA}" data-typ="s1"></td>
-        <td><input type="number" data-match="${i}" data-team="${spiel.teamA}" data-typ="s2"></td>
-        <td style="text-align:left;">${logoHTML(spiel.teamB)}</td>
-        <td><input type="number" data-match="${i}" data-team="${spiel.teamB}" data-typ="s1"></td>
-        <td><input type="number" data-match="${i}" data-team="${spiel.teamB}" data-typ="s2"></td>
-        <td>${spiel.schiri}</td>`;
-      tbody.appendChild(tr);
-    });
-
-    // --- VORRUNDE AUSWERTUNG & KO-START ---
-    let koTeams = [];
-    let koMatches = [];
-    let halbfinaleMatches = [];
-    let finaleMatches = [];
-    let platzierungsMatches = [];
-    let koResults = {};
-    let halbfinaleResults = {};
-    let finaleResults = {};
-    let platzierungResults = {};
-
-    function berechnePunkteUndStarteKO() {
-      alleTeams.forEach(t => punkte[t] = { punkte: 0, bälle: 0 });
-      document.querySelectorAll('input[type="number"]').forEach(input => {
-        const team = input.dataset.team;
-        const val = parseInt(input.value || '0');
-        if (!isNaN(val)) punkte[team].bälle += val;
-      });
-      belegung.forEach((spiel, i) => {
-        const a1 = parseInt(document.querySelector(`input[data-match='${i}'][data-team='${spiel.teamA}'][data-typ='s1']`)?.value || 0);
-        const a2 = parseInt(document.querySelector(`input[data-match='${i}'][data-team='${spiel.teamA}'][data-typ='s2']`)?.value || 0);
-        const b1 = parseInt(document.querySelector(`input[data-match='${i}'][data-team='${spiel.teamB}'][data-typ='s1']`)?.value || 0);
-        const b2 = parseInt(document.querySelector(`input[data-match='${i}'][data-team='${spiel.teamB}'][data-typ='s2']`)?.value || 0);
-        if (a1 > b1 && a1 >= 15) punkte[spiel.teamA].punkte += 2;
-        if (b1 > a1 && b1 >= 15) punkte[spiel.teamB].punkte += 2;
-        if (a2 > b2 && a2 >= 15) punkte[spiel.teamA].punkte += 2;
-        if (b2 > a2 && b2 >= 15) punkte[spiel.teamB].punkte += 2;
-      });
-      ['A','B'].forEach(gr => {
-        const tabelle = document.getElementById(`ranking-${gr}`);
-        const teams = gr === 'A' ? gruppeA : gruppeB;
-        tabelle.innerHTML = teams
-          .slice()
-          .sort((a,b)=>
-            punkte[b].punkte - punkte[a].punkte ||
-            punkte[b].bälle - punkte[a].bälle
-          )
-          .map(t=>`<tr><td style="text-align:left;">${logoHTML(t)}</td><td>${punkte[t].punkte}</td><td>${punkte[t].bälle}</td></tr>`)
-          .join('');
-      });
-
-      const sortA = gruppeA.slice().sort((a,b)=>
-        punkte[b].punkte - punkte[a].punkte ||
-        punkte[b].bälle - punkte[a].bälle
-      );
-      const sortB = gruppeB.slice().sort((a,b)=>
-        punkte[b].punkte - punkte[a].punkte ||
-        punkte[b].bälle - punkte[a].bälle
-      );
-
-      koTeams = [
-        sortA[0], sortA[1], sortA[2], sortA[3],
-        sortB[0], sortB[1], sortB[2], sortB[3]
-      ];
-
-      koMatches = [
-        {teamA: sortA[0], teamB: sortB[3], label: 'Viertelfinale 1', feld: 'Feld 1 (Sand)', platz: 'Halbfinale'},
-        {teamA: sortA[1], teamB: sortB[2], label: 'Viertelfinale 2', feld: 'Feld 2 (Rasen)', platz: 'Halbfinale'},
-        {teamA: sortB[0], teamB: sortA[3], label: 'Viertelfinale 3', feld: 'Feld 1 (Sand)', platz: 'Halbfinale'},
-        {teamA: sortB[1], teamB: sortA[2], label: 'Viertelfinale 4', feld: 'Feld 2 (Rasen)', platz: 'Halbfinale'}
-      ];
-
-      platzierungsMatches = [
-        {teamA: sortA[4], teamB: sortB[5], label: 'Spiel um Platz 9', feld: 'Feld 1 (Sand)'},
-        {teamA: sortA[5], teamB: sortB[4], label: 'Spiel um Platz 11', feld: 'Feld 2 (Rasen)'}
-      ];
-
-      document.getElementById('ko-runde').innerHTML = `
-        <h2 class="runde-section">🏆 KO-Runde – Viertelfinale</h2>
-        ${koMatches.map((m,i)=>`
-          <div class="match-row" id="ko-match-${i}">
-            <span class="feld-label">${m.feld}</span>
-            <span style="min-width:120px;">${logoHTML(m.teamA)}</span>
-            <input type="number" min="0" max="30" id="ko-${i}-s1a" placeholder="Satz 1">
-            <input type="number" min="0" max="30" id="ko-${i}-s2a" placeholder="Satz 2">
-            <input type="number" min="0" max="30" id="ko-${i}-s3a" placeholder="Satz 3">
-            <b>vs.</b>
-            <input type="number" min="0" max="30" id="ko-${i}-s1b" placeholder="Satz 1">
-            <input type="number" min="0" max="30" id="ko-${i}-s2b" placeholder="Satz 2">
-            <input type="number" min="0" max="30" id="ko-${i}-s3b" placeholder="Satz 3">
-            <span style="min-width:120px;">${logoHTML(m.teamB)}</span>
-            <span style="margin-left:20px;">${m.label} – Einzug ins ${m.platz}</span>
-          </div>
-        `).join('')}
-        <h3>Platzierungsspiele 9–12</h3>
-        ${platzierungsMatches.map((m,i)=>`
-          <div class="match-row" id="platz9-12-match-${i}">
-            <span class="feld-label">${m.feld}</span>
-            <span style="min-width:120px;">${logoHTML(m.teamA)}</span>
-            <input type="number" min="0" max="15" id="platz9-12-${i}-a-s1" placeholder="Satz 1">
-            <input type="number" min="0" max="15" id="platz9-12-${i}-a-s2" placeholder="Satz 2">
-            <input type="number" min="0" max="15" id="platz9-12-${i}-a-s3" placeholder="Satz 3">
-            <b>vs.</b>
-            <input type="number" min="0" max="15" id="platz9-12-${i}-b-s1" placeholder="Satz 1">
-            <input type="number" min="0" max="15" id="platz9-12-${i}-b-s2" placeholder="Satz 2">
-            <input type="number" min="0" max="15" id="platz9-12-${i}-b-s3" placeholder="Satz 3">
-            <span style="min-width:120px;">${logoHTML(m.teamB)}</span>
-            <span style="margin-left:20px;">${m.label}</span>
-          </div>
-        `).join('')}
-      `;
-
-      document.getElementById('btn-halbfinale').classList.remove('hidden');
-      document.getElementById('btn-finale').classList.add('hidden');
-      document.getElementById('btn-platzierung').classList.add('hidden');
-      document.getElementById('halbfinale').innerHTML = '';
-      document.getElementById('finale').innerHTML = '';
-      document.getElementById('gesamtplatzierung').innerHTML = '';
-      koResults = {};
-      halbfinaleResults = {};
-      finaleResults = {};
-      platzierungResults = {};
-    }
-
-    // Die restlichen Funktionen bleiben wie gehabt, ggf. Feldbezeichnung für Halbfinale/Finale auf Feld 1 (Sand) setzen
-    // ... (wie in deiner letzten Version, siehe oben) ...
+    // Beim Laden: alles gesperrt
+    setAdminMode(false);
   </script>
 </body>
 </html>
-
